code-gen/templates/p1as-pingaccess-was/remove-unneeded-ingresses.yaml
# Remove PingFederate Admin ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-admin-console-ingress
$patch: delete
---
# Remove PingAccess Admin ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-admin-console-ingress
$patch: delete
---
# Remove Logs ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logs-ingress
$patch: delete
---
